force-app/main/default/objects/Int_Risk_Costs_Movements__c/Int_Risk_Costs_Movements__c.object-meta.xml
<CustomObject>
    <description>Int Risk Costs Movements</description>
    <label>Int Risk Costs Movements</label>
    <nameField>
        <displayFormat>RCM-{0000000000}</displayFormat>
        <label>Risk Costs Movements ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Int Risk Costs Movements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>