force-app/main/default/objects/Int_Risk_Costs_Movements__c/fields/Risk_Costs_Movement_Amount__c.field-meta.xml
<CustomField>
    <fullName>Risk_Costs_Movement_Amount__c</fullName>
    <description>Risk Costs Movement Amount</description>
    <label>Risk Costs Movement Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>