force-app/main/default/objects/Int_Risk_Costs_Movements__c/fields/Risk_Costs_Movement_Date__c.field-meta.xml
<CustomField>
    <fullName>Risk_Costs_Movement_Date__c</fullName>
    <description>Risk Costs Movement Date</description>
    <label>Risk Costs Movement Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>