force-app/main/default/objects/Int_Risk_Costs_Movements__c/fields/Risk_Costs_Movement_ID__c.field-meta.xml
<CustomField>
    <fullName>Risk_Costs_Movement_ID__c</fullName>
    <description>Risk Costs Movement ID</description>
    <label>Risk Costs Movement ID</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>