force-app/main/default/objects/Int_Risk_Costs_Movements__c/fields/Risk_Costs_Movement_Type__c.field-meta.xml
<CustomField>
    <fullName>Risk_Costs_Movement_Type__c</fullName>
    <description>Risk Costs Movement Type</description>
    <label>Risk Costs Movement Type</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>